[gd_scene load_steps=4 format=3 uid="uid://cr773w8m7st2v"]

[ext_resource type="Script" uid="uid://dhngmh82fygu1" path="res://Scripts/Interface/MainMenu.gd" id="1_853f1"]
[ext_resource type="FontFile" uid="uid://b6ixxpdy5in1g" path="res://Fonts/Schoolbell-Regular.ttf" id="1_tt5f1"]

[sub_resource type="LabelSettings" id="LabelSettings_mj0i0"]
font_size = 26
font_color = Color(0.52906674, 0.5290667, 0.5290667, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_853f1")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 216.0
offset_top = 108.0
offset_right = 984.0
offset_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 70
text = "Kemispillet"
horizontal_alignment = 1

[node name="PlayingOn" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 70
text = "Playing on ..."
label_settings = SubResource("LabelSettings_mj0i0")
horizontal_alignment = 1

[node name="LoginButton" type="MenuButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 40
text = "Login"

[node name="RegisterButton" type="MenuButton" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_tt5f1")
theme_override_font_sizes/font_size = 40
text = "Register"

[connection signal="button_up" from="PanelContainer/VBoxContainer/LoginButton" to="." method="_on_login_button_button_up"]
[connection signal="button_up" from="PanelContainer/VBoxContainer/RegisterButton" to="." method="_on_register_button_button_up"]
